[package]
name = "pirateship-svr3"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
curve25519-dalek = "4.1.3"
itertools = "0.14.0"
rand = "0.8"
sha2 = "0.10.9"
shamirsecretsharing = "0.1.7"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
voprf = "0.5.0"

pft = { git = "https://github.com/PirateshipOrg/pirateship.git", branch = "main" }
