[package]
name = "pirateship-svr3"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
curve25519-dalek = { version = "4.1.3", features = ["serde"] }
itertools = "0.14.0"
rand = "0.8"
sha2 = "0.10.9"
shamirsecretsharing = "0.1.7"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
voprf = { version = "0.5.0", features = ["serde"] }

pft = { git = "https://github.com/PirateshipOrg/pirateship.git", branch = "main" }
log = "0.4.28"
log4rs = "1.4.0"
serde_json = "1.0.145"
serde = "1.0.228"
dashmap = "6.1.0"
base64 = "0.22.1"
